// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
<div>
  <button
    class="jsx-2859537842 btn "
    type="button"
  >
    <div
      class="text"
    >
      Button
    </div>
  </button>
</div>
`;

exports[`Button should render empty button correctly 1`] = `<Memo />`;

exports[`Button should render special styles 1`] = `
<div>
  <div>
    <button
      class="jsx-2859537842 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-3196346758 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-3767918470 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-1338979910 btn "
      type="button"
    >
      <div
        class="jsx-3880090443 btn-loading"
      >
        <div
          class="jsx-192632595 loading-container"
        >
          <span
            class="jsx-192632595 loading"
          >
            <i
              class="jsx-192632595"
            />
            <i
              class="jsx-192632595"
            />
            <i
              class="jsx-192632595"
            />
          </span>
        </div>
      </div>
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-2013177189 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-889133054 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
    <button
      class="jsx-2859537842 btn "
      type="button"
    >
      <div
        class="text"
      >
        button
      </div>
    </button>
  </div>
</div>
`;

exports[`Button should support all sizes 1`] = `
<div>
  <div>
    <button
      class="jsx-2276747868 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-209395622 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-2859537842 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-352542514 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
  </div>
</div>
`;

exports[`Button should support all types 1`] = `
<div>
  <div>
    <button
      class="jsx-3011474918 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-1410225318 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-4021411590 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-3090015974 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
    <button
      class="jsx-1075170789 btn "
      type="button"
    >
      <div
        class="text"
      />
    </button>
  </div>
</div>
`;
